PRojeto netflix finalizado

--- a/Introduct_ao_VueJS2/netflixVue/netflixVue/index.html
+++ b/Introduct_ao_VueJS2/netflixVue/netflixVue/index.html
@@ -2,10 +2,14 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>netflix_vue</title>
+    <title>netflixvue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+      <router-view></router-view>
+
+    </div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
